--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -20,60 +20,75 @@
   <!-- wrapper -->
   <div class="wrapper">
   <!-- img placed here -->
-
   <h1>Simple Omelette Recipe</h1>
 
-  <!-- p -->
-  An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-  to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+  <p class="recipe_overview">
+    An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+    to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+  </p>
+  
+  <section class="prep">
+    <p class="prep_title">Preparation time</p> 
+    <ul class="prep_time">
+      <li>Total: Approximately 10 minutes</li>
+      <li>Preparation: 5 minutes</li>
+      <li>Cooking: 5 minutes</li>
+    </ul>
+  </section>
 
-  Preparation time
+  <section class="ingredients">
+    <h4 class="ingredients_title">Ingredients</h4>
+    <ul class="ingredients_list">
+      <li>2-3 large eggs</li>
+      <li>Salt, to taste</li>
+      <li>Pepper, to taste</li>
+      <li>1 tablespoon of butter or oil</li>
+      <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+    </ul>
+  </section>
 
-  Total: Approximately 10 minutes
-  Preparation: 5 minutes
-  Cooking: 5 minutes
-
-  Ingredients
-
-  2-3 large eggs
-  Salt, to taste
-  Pepper, to taste
-  1 tablespoon of butter or oil
-  Optional fillings: cheese, diced vegetables, cooked meats, herbs
-
-  Instructions
-
-  Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-  You can add a tablespoon of water or milk for a fluffier texture.
-
-  Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.
-
-  Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-  the eggs evenly coat the surface.
-
-  Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-  middle, sprinkle your chosen fillings over one half of the omelette.
-
-  Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-  fillings. Let it cook for another minute, then slide it onto a plate.
-
-  Enjoy: Serve hot, with additional salt and pepper if needed.
-
-  Nutrition
-
-  The table below shows nutritional values per serving without the additional fillings.
-
-  Calories
-  277kcal
-
-  Carbs
-  0g
-
-  Protein
-  20g
-
-  Fat
-  22g
+  <section class="instruct">
+    <h4 class="intsruct_title">Instructions</h4>
+  
+    <ol class="instruct_list">
+      <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+        You can add a tablespoon of water or milk for a fluffier texture.</li>
+      <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+      <li> Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+        the eggs evenly coat the surface.</li>
+      <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
+        middle, sprinkle your chosen fillings over one half of the omelette.</li>
+      <li>
+        Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
+        fillings. Let it cook for another minute, then slide it onto a plate.</li>
+      <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+    </ol>
+  </section>
+  
+  
+  <section class="nutri">
+    <h4 class="nutri_title">Nutrition</h4>
+  
+    <p class="nutri_exclaimer">
+      The table below shows nutritional values per serving without the additional fillings.
+    </p>
+    <div class="cal">
+      Calories
+      277kcal
+    </div>
+    <div class="carb">
+      Carbs
+      0g
+    </div>
+    <div class="protein">
+      Protein
+      20g
+    </div>
+    <div class="fat">
+      Fat
+      22g
+    </div>
+  </section>
 </div>
 
   <div class="attribution">
