--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -16,85 +16,88 @@
   <title>Frontend Mentor | Recipe page</title>
 
 </head>
-<body>
-  <!-- wrapper -->
-  <div class="wrapper">
-  <!-- img placed here -->
-  <h1>Simple Omelette Recipe</h1>
+  <body>
+    <main>
+      <div class="wrapper">
 
-  <p class="recipe_overview">
-    An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
-    to perfection, optionally filled with your choice of cheese, vegetables, or meats.
-  </p>
-  
-  <section class="prep">
-    <p class="prep_title">Preparation time</p> 
-    <ul class="prep_time">
-      <li>Total: Approximately 10 minutes</li>
-      <li>Preparation: 5 minutes</li>
-      <li>Cooking: 5 minutes</li>
-    </ul>
-  </section>
+        <section class="intro">
+          <img src="assets/images/image-omelette.jpeg" alt="beautiful display of the simple omelet">
+          <h3>Simple Omelette Recipe</h3>
 
-  <section class="ingredients">
-    <h4 class="ingredients_title">Ingredients</h4>
-    <ul class="ingredients_list">
-      <li>2-3 large eggs</li>
-      <li>Salt, to taste</li>
-      <li>Pepper, to taste</li>
-      <li>1 tablespoon of butter or oil</li>
-      <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-    </ul>
-  </section>
+          <p class="recipe_overview">
+            An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
+            to perfection, optionally filled with your choice of cheese, vegetables, or meats.
+          </p>
+        </section>
 
-  <section class="instruct">
-    <h4 class="intsruct_title">Instructions</h4>
-  
-    <ol class="instruct_list">
-      <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
-        You can add a tablespoon of water or milk for a fluffier texture.</li>
-      <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
-      <li> Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
-        the eggs evenly coat the surface.</li>
-      <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
-        middle, sprinkle your chosen fillings over one half of the omelette.</li>
-      <li>
-        Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
-        fillings. Let it cook for another minute, then slide it onto a plate.</li>
-      <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
-    </ol>
-  </section>
-  
-  
-  <section class="nutri">
-    <h4 class="nutri_title">Nutrition</h4>
-  
-    <p class="nutri_exclaimer">
-      The table below shows nutritional values per serving without the additional fillings.
-    </p>
-    <div class="cal">
-      Calories
-      277kcal
-    </div>
-    <div class="carb">
-      Carbs
-      0g
-    </div>
-    <div class="protein">
-      Protein
-      20g
-    </div>
-    <div class="fat">
-      Fat
-      22g
-    </div>
-  </section>
-</div>
+        <section class="prep">
+          <p class="prep_title">Preparation time</p> 
+          <ul class="prep_time">
+            <li>Total: Approximately 10 minutes</li>
+            <li>Preparation: 5 minutes</li>
+            <li>Cooking: 5 minutes</li>
+          </ul>
+        </section>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ernest Mummey</a>.
-  </div>
+        <section class="ingredients">
+          <p class="ingredients_title">Ingredients</p>
+          <ul class="ingredients_list">
+            <li>2-3 large eggs</li>
+            <li>Salt, to taste</li>
+            <li>Pepper, to taste</li>
+            <li>1 tablespoon of butter or oil</li>
+            <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
+          </ul>
+        </section>
 
-</body>
+        <section class="instruct">
+          <p class="intsruct_title">Instructions</p>
+        
+          <ol class="instruct_list">
+            <li>Beat the eggs: In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. 
+              You can add a tablespoon of water or milk for a fluffier texture.</li>
+            <li>Heat the pan: Place a non-stick frying pan over medium heat and add butter or oil.</li>
+            <li> Cook the omelette: Once the butter is melted and bubbling, pour in the eggs. Tilt the pan to ensure 
+              the eggs evenly coat the surface.</li>
+            <li>Add fillings (optional): When the eggs begin to set at the edges but are still slightly runny in the 
+              middle, sprinkle your chosen fillings over one half of the omelette.</li>
+            <li>
+              Fold and serve: As the omelette continues to cook, carefully lift one edge and fold it over the 
+              fillings. Let it cook for another minute, then slide it onto a plate.</li>
+            <li>Enjoy: Serve hot, with additional salt and pepper if needed.</li>
+          </ol>
+        </section>
+  
+  
+        <section class="nutri">
+          <p class="nutri_title">Nutrition </p>
+        
+          <p class="nutri_exclaimer">
+            The table below shows nutritional values per serving without the additional fillings.
+          </p>
+          <div class="cal">
+            <p class="cal_title">Calories</p>
+            <p class="cal_total">277kcal</p>
+          </div>
+          <div class="carb">
+            <p class="carb_title">Carbs</p>
+            <p class="carb_total">0g</p>
+          </div>
+          <div class="protein">
+            <p class="protein_title">Protein</p>
+            <p class="protein_total">20g</p>
+          </div>
+          <div class="fat">
+            <p class="fat_title">Fat</p>
+            <p class="fat_total">22g</p>
+          </div>
+        </section>
+      </div>
+
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Ernest Mummey</a>.
+      </div>
+    </main>
+  </body>
 </html>
