Continue CSS Layout, Refracter CSS Layout

--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -37,7 +37,9 @@
           <section class="prep">
             <h2 class="prep_title">Preparation time</h2> 
             <ul class="prep_time">
-              <li>Total: Approximately 10 minutes</li>
+              <li><p class="list_item">
+                <span class="list_item_title">Total</span>: Approximately 10 minutes
+              </p></li>
               <li>Preparation: 5 minutes</li>
               <li>Cooking: 5 minutes</li>
             </ul>
