--- a/recipe-page-main/index.html
+++ b/recipe-page-main/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
 
           <section class="intro">
             <div class="intro_image">
-              <img src="assets/images/image-omelette.jpeg" alt="beautiful display of the simple omelet">
+              <img src="assets/image-omelette.jpeg" alt="beautiful image of the simple omelet">
             </div>
             <div class="intro_description">
               <h1>Simple Omelette Recipe</h1>
